noinst_LIBRARIES=libburr.a

XML_CPP_ADD=@XML_CPP_ADD@
XML_LD_ADD=@XML_LD_ADD@

libburr_a_CPPFLAGS=-Wall $(XML_CPP_ADD)

libburr_a_SOURCES=disassembler.h assembler.h \
                  disassembler_0.h disassembler_0.cpp \
                  disassembly.cpp disassembly.h \
                  assembly.cpp assembly.h \
                  assembler_0.cpp assembler_0.h \
                  assm_0_frontend_0.cpp assm_0_frontend_0.h \
                  puzzle.cpp puzzle.h \
                  voxel.cpp voxel.h \
                  burrgrower.h burrgrower.cpp \
                  pieceGenerator.h pieceGenerator.cpp \
                  symmetries.h symmetries.cpp \
                  AssemblyCallbacks.cpp AssemblyCallbacks.h \
                  print.h print.cpp \
                  ps3dloader.h ps3dloader.cpp \
                  movementcache.h movementcache.cpp \
                  grouping.h grouping.cpp \
                  bt_assert.h bt_assert.cpp

