noinst_LIBRARIES=libburr.a

XML_CPP_ADD=@XML_CPP_ADD@
XML_LD_ADD=@XML_LD_ADD@

libburr_a_CPPFLAGS=-Wall $(XML_CPP_ADD)

libburr_a_SOURCES=disassembler.h assembler.h \
                  disassembler_0.h disassembler_0.cpp \
                  disassembly.cpp disassembly.h \
                  assembly.cpp assembly.h \
                  assembler_0.cpp assembler_0.h \
                  assm_0_frontend_0.cpp assm_0_frontend_0.h \
                  puzzle.cpp puzzle.h \
                  voxel.cpp voxel.h \
		  voxel_0.cpp voxel_0.h \
		  voxel_1.cpp voxel_1.h \
                  burrgrower.h burrgrower.cpp \
                  piecegenerator.h piecegenerator.cpp \
                  symmetries.h \
                  symmetries_0.h symmetries_0.cpp \
                  symmetries_1.h symmetries_1.cpp \
                  assemblerthread.cpp assemblerthread.h \
                  print.h print.cpp \
                  ps3dloader.h ps3dloader.cpp \
                  movementcache.h movementcache.cpp \
                  grouping.h grouping.cpp \
                  bt_assert.h bt_assert.cpp \
		  gridtype.h gridtype.cpp \
		  types.h \
		  tabs_0/rotx.inc tabs_0/roty.inc tabs_0/rotz.inc tabs_0/symcalc.inc tabs_0/symmetries.inc \
		  tabs_0/tablesizes.inc tabs_0/transformmini.inc tabs_0/transmult.inc tabs_0/unifiedsym.inc \
		  tabs_1/rotx.inc tabs_1/roty.inc tabs_1/rotz.inc tabs_1/symcalc.inc tabs_1/symmetries.inc \
		  tabs_1/tablesizes.inc tabs_1/transformmini.inc tabs_1/transmult.inc tabs_1/unifiedsym.inc

