noinst_LIBRARIES=libburr.a

XML_CPP_ADD=@XML_CPP_ADD@
XML_LD_ADD=@XML_LD_ADD@

libburr_a_CPPFLAGS=-Wall $(XML_CPP_ADD)

libburr_a_SOURCES=\
                  assembler.h \
                  assembler_0.cpp assembler_0.h \
                  assembly.cpp assembly.h \
                  assm_0_frontend_0.cpp assm_0_frontend_0.h \
                  assm_0_frontend_1.cpp assm_0_frontend_1.h \
                  assemblerthread.cpp assemblerthread.h \
                  bt_assert.h bt_assert.cpp \
                  burrgrower.h burrgrower.cpp \
                  disassembler.h \
                  disassembler_0.h disassembler_0.cpp \
                  disassembly.cpp disassembly.h \
		  disasmtomoves.cpp disasmtomoves.h \
		  gridtype.h gridtype.cpp \
                  grouping.h grouping.cpp \
                  movementcache.h movementcache.cpp \
                  piecegenerator.h piecegenerator.cpp \
                  print.h print.cpp \
                  ps3dloader.h ps3dloader.cpp \
                  puzzle.cpp puzzle.h \
                  symmetries.h \
                  symmetries_0.h symmetries_0.cpp \
                  symmetries_1.h symmetries_1.cpp \
                  voxel.cpp voxel.h \
		  voxel_0.cpp voxel_0.h \
		  voxel_1.cpp voxel_1.h \
		  types.h \
		  tabs_0/rotx.inc tabs_0/roty.inc tabs_0/rotz.inc tabs_0/symcalc.inc tabs_0/symmetries.inc \
		  tabs_0/tablesizes.inc tabs_0/transformmini.inc tabs_0/transmult.inc tabs_0/unifiedsym.inc \
		  tabs_1/rotx.inc tabs_1/roty.inc tabs_1/rotz.inc tabs_1/symcalc.inc tabs_1/symmetries.inc \
		  tabs_1/tablesizes.inc tabs_1/transformmini.inc tabs_1/transmult.inc tabs_1/unifiedsym.inc

